--- a/public/test/html/index.html
+++ b/public/test/html/index.html
@@ -388,24 +388,19 @@
 
       </tei-facsimile>
 
-      <tei-text xml:id="transcription" id="transcription" data-origname="text">
-      <tei-body data-origname="body">
-        <tei-div data-origname="div">
-          <tei-pb facs="#f009" data-origname="pb" data-empty=""></tei-pb>
-          <tei-div type="columns" data-origname="div">
-            <tei-div type="column" n="1" data-origname="div">
-              <tei-ab data-origname="ab">
-                <tei-lb data-origname="lb" data-empty=""></tei-lb>Text for Column 1 goes here.
-              </tei-ab>
-            </tei-div>
-            <tei-div type="column" n="2" data-origname="div">
-              <tei-ab data-origname="ab">
-                <tei-lb data-origname="lb" data-empty=""></tei-lb>Text for Column 2 goes here.
-              </tei-ab>
-            </tei-div>
-          </tei-div>
-        </tei-div>
-      </tei-body>
-    </tei-text>
+      <tei-text xml:id="text" id="text" data-origname="text">
+<tei-body data-origname="body"><tei-div data-origname="div">
+    <tei-pb facs="#f009" data-origname="pb" data-empty=""></tei-pb>
+<tei-ab data-origname="ab">
+<tei-lb data-origname="lb" data-empty=""></tei-lb>Text goes here
+</tei-ab>
 
+<tei-pb facs="#f019" data-origname="pb" data-empty=""></tei-pb>
+<tei-ab data-origname="ab">
+<tei-lb data-origname="lb" data-empty=""></tei-lb>//This is for seq. 20 
+<tei-lb data-origname="lb" data-empty=""></tei-lb>Test Line
+</tei-ab>
+
+  </tei-div></tei-body>
+      </tei-text>
   </tei-tei>
