--- a/public/test/html/translation/index.html
+++ b/public/test/html/translation/index.html
@@ -1,4 +1,4 @@
-<tei-text xml:id="transcription" id="transcription" data-origname="text">
+<tei-text xml:id="translation" id="translation" data-origname="text">
 <tei-body data-origname="body"><tei-div data-origname="div">
     <tei-pb facs="#f009" data-origname="pb" data-empty=""></tei-pb>
 <tei-ab data-origname="ab">
